// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`initHOST should fallback to localhost 2`] = `
Object {
  "internalIpV4Calls": Array [
    Array [],
  ],
  "logCalls": Array [
    Array [
      "debug",
      "🏭 - Initializing the HOST service.",
    ],
    Array [
      "warning",
      "🚫 - Could not detect any host. Fallbacking to localhost.",
    ],
  ],
  "requireCalls": Array [
    Array [
      "internal-ip",
    ],
  ],
}
`;

exports[`initHOST should find a HOST by itself if no env HOST 2`] = `
Object {
  "internalIpV4Calls": Array [
    Array [],
  ],
  "logCalls": Array [
    Array [
      "debug",
      "🏭 - Initializing the HOST service.",
    ],
    Array [
      "warning",
      "✔ - Using detected host 192.168.1.10",
    ],
  ],
  "requireCalls": Array [
    Array [
      "internal-ip",
    ],
  ],
}
`;

exports[`initHOST should use the env HOST first 2`] = `
Object {
  "internalIpV4Calls": Array [],
  "logCalls": Array [
    Array [
      "debug",
      "🏭 - Initializing the HOST service.",
    ],
    Array [
      "warning",
      "♻️ - Using ENV host 192.168.1.11",
    ],
  ],
  "requireCalls": Array [],
}
`;
